tcket prefix used

--- a/Titanic_ML.ipynb
+++ b/Titanic_ML.ipynb
@@ -921,13 +921,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
     "y = train[\"Survived\"]\n",
     "\n",
-    "features = [\"Pclass\", \"Sex\", \"SibSp\", \"Parch\", \"Age\", \"Fare\", \"Title\"]\n",
+    "features = [\"Pclass\", \"Sex\", \"SibSp\", \"Parch\", \"Age\", \"Fare\", \"Title\", \"TicketPrefix\"]\n",
     "\n",
     "# Use pd.get_dummies to convert categorical variables to dummy/indicator variables\n",
     "X = pd.get_dummies(train[features])\n",
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
