--- a/Titanic_ML.ipynb
+++ b/Titanic_ML.ipynb
@@ -1096,7 +1096,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Versión 1 :"
+    "### Versión 1 :\n",
+    "\n",
+    "Modelo básico con RandomForest y todas las variables transformadas a dummies. Punto de partida."
    ]
   },
   {
@@ -1175,7 +1177,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Versión 2 :"
+    "### Versión 2 :\n",
+    "\n",
+    "Regresión Logística tras transformar todas las variables a numéricas.\n",
+    "\n",
+    "Llegamos a la conclusión de que hasta despues de hacer GridSearch, se producía Overfitting, así que nos decantamos por cambiar de modelo."
    ]
   },
   {
@@ -1596,7 +1602,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Versión 3:"
+    "### Versión 3:\n",
+    "\n",
+    "Volvemos a usar RandomForest, pero esta vez profundizando un poco más. Vamos a escoger las variables que más relación tengan con el target, convertir las variables a numéricas y GridSearch para llegar a una solución."
    ]
   },
   {
@@ -2926,6 +2934,22 @@
    "source": [
     "<a name='5'></a>\n",
     "## Resultados y conclusión"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Es un modelo en el que se produce overfitting con facilidad. En las validaciones cruzadas sobre el conjunto de train suelen salir mejores predicciones que al aplicar la submission al test.\n",
+    "\n",
+    "Intentamos evitar esto con GridSearch.\n",
+    "\n",
+    "Uno de los aciertos de este trabajo para mí ha sido extraer el título que precede al nombre y almacenarlo como una variable categorica. (Mr, Miss, Mrs, Don, Donna, Captain, etc.)\n",
+    "Ha sido una de las variables que el modelo ha clasificado con mayor importancia, despues del sexo y la edad.\n",
+    "\n",
+    "Alcanzamos el puesto 1200 de la clasificación, sobre 14620 participantes, en el concurso de Kaggle con una predicción sobre el conjunto de test de 0.78947, no está mal teniendo en cuenta que al ser un conjunto de datos relativamente pequeño, hay algunas participaciones que se han hecho con métodos que quedan fuera del marco del Machine Learning y los modelos de predicción.\n",
+    "\n",
+    "Ha sido un buen aprendizaje construir este modelo, y me ha servido para adquirir conocimientos sobre cómo tratar un conjunto de datos y crear un modelo de clasificación. Tengo ganas de enfrentarme a problemas reales con mayores conjuntos de datos."
    ]
   }
  ],
