--- a/Titanic_ML.ipynb
+++ b/Titanic_ML.ipynb
@@ -39,6 +39,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "¡Bienvenido al **Desafío de predicción del Titanic**! Este proyecto tiene como objetivo desarrollar un modelo que prediga si un pasajero sobrevivirá al desastre del Titanic.\n",
+    "\n",
+    "La motivación de este proyecto es adquirir aprendizaje sobre Machine Learning con Python y los modelos de prediccion afrontando un reto de Kaggle de predicción sobre un pequeño dataset con información relativa a los pasajeros del titanic, con el objetivo de predecir si cada persona a bordo del Titanic será o no un superviviente."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a name='1.1'></a>\n",
     "### Imports"
    ]
