--- a/Titanic_ML.ipynb
+++ b/Titanic_ML.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "<a name='title'></a>\n",
-    "# Recomendación musical en KKBox\n"
+    "# Modelo de predicción sobre el desastre del Titanic\n"
    ]
   },
   {
